add summary for voc

--- a/templates/besluitvorming-voc.j2
+++ b/templates/besluitvorming-voc.j2
@@ -1,5 +1,5 @@
 {% extends "voc2.j2" %}
 
 {% block summary %}
-<p> TO DO </p>
+<p>Het conceptueel informatiemodel "besluitvorming" vormt de basis voor de uitwisseling van informatie binnen een besluitvormingsproces tussen verschillende betrokken partijen. Het definieert een aantal abstracte entiteiten, relevante eigenschappen en hun onderlinge relaties. Dit conceptueel informatiemodel vormt de basis voor ontwikkelaars  om verder uit te werken tot een fysiek datamodel. Het vocabularium geeft een overzicht van de gebruikte terminologie en daaraan gekoppeld definities.</p>
 {% endblock %}
