initiele samenvatting ap

--- a/templates/besluitvorming-ap.j2
+++ b/templates/besluitvorming-ap.j2
@@ -1,5 +1,24 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p> TO DO </p>
+
+<p>Deze specificatie definieert een gemeenschappelijk en expliciet begrippenkader over de uit te wisselen data van een besluitvormingsproces met een beoogde beslissing. Het profiel is ontwikkeld om informatie uit het besluitvormingsproces eenduidig te kunnen uitwisselen tussen de verschillende betrokken partijen. Het vormt ook een basis informatiemodel dat ontwikkelaars van software die het besluitvormingsproces ondersteunen verder kunnen uitbreiden naar een fysiek datamodel.</p>
+
+<p>Dit applicatieprofiel herbruikt zoveel mogelijk bestaande vocabularia, specifiek werden binnen OSLO termen herbruikt uit <a href="https://data.vlaanderen.be/ns/dossier/">OSLO dossier</a>, <a href="https://data.vlaanderen.be/ns/besluit/">OSLO besluit</a>, <https://data.vlaanderen.be/ns/generiek>OSLO generiek</a> en <https://data.vlaanderen.be/ns/organisatie>OSLO organisatie</a>. Daarnaast wordt ook in grote mate gesteund op de W3C standaard <a href="https://www.w3.org/TR/prov-o/">Provenance ontology</a> (PROV-O).
+
+<p>Drie klassen vormen de basis van het besluitvorming applicatieprofiel:</p>
+<ul>
+<li>Een <strong>Stuk</strong> is een entiteit die iets beschrijft en/of informatie bevat. Stukken kunnen worden gebruikt of gegenereert tijdens activiteiten en hebben een of meer Agenten als auteur.</li>
+<li>Een <strong>Activiteit</strong> is een handeling van bepaalde duur op of met entiteiten; Het kan gaan om het consumeren, verwerken, transformeren, wijzigen, verplaatsen, gebruiken of genereren van entiteiten.</li>
+<li>Een <strong>Agent</strong> is iemand die of iets dat kan handelen of een effect kan teweeg brengen. Een agent draagt een vorm van verantwoordelijkheid (rol) binnen een activiteit die plaatsvindt.<br> NOTA: Voor Agent werd binnen OSLO gekozen om de definitie uit dublin core te herbruiken. Binnen dit applicatieprofiel mag uitgegaan worden van de equivalentie tussen dc:Agent en prov:Agent, zoals aangeven in de <a href="https://www.w3.org/TR/2013/NOTE-prov-dc-20130430/">mapping</a> van het W3C.</li>
+</ul>
+
+<p>De <strong>Besluitvormingsaangelegenheid</strong> bestaat uit een samenhangende hoeveelheid activiteiten met een aanleiding en een beoogde beslissing. Samenhorende activiteiten worden gegroepeerd in een <strong>Procedurestap</strong>. Een aangelegenheid kan verschillende procedurestappen doorlopen. Samen vormen deze klassen een beschrijving van het werk dat wordt uitgevoerd tijdens het besluitvormingsproces.</p>
+
+<p>Elke besluitvormingsaangelegenheid heeft een bijhorend <strong>dossier</strong>. Dit dossier is een samenhangend geheel van stukken. Het dossier is de neerslag van de besluitvormingsaangelegenheid.</p> 
+
+<p>De agendering en bespreking van een besluitvormingsaangelegenheid kreeg extra aandacht binnen het applicatieprofiel. De relevante klassen bevinden zich voornamelijk aan de rechterkant van het UML diagrama. Sommige types van activiteiten kregen hier hun eigen klasse: Agendering, BehandelingVanAgendapunt, BeslissingsActiviteit en Stemming. Er werd gekozen deze als klasse op te nemen omdat ze specifieke relatie(s) met een andere klassen in het diagrama hebben.</p>
+
+<p>De <strong>Beslissingsactiviteit</strong> kan aanleiding geven tot een <strong>besluit<strong>, bijvoorbeeld bij het besluit tot bekrachtiging van een decreet door de Vlaamse Regering. Een <strong>besluit</strong>, ten slotte, is een intellectuele realisatie van een rechtsbron en houdt een rechtshandeling in waarbij sprake is van een beoogd rechtsgevolg. Het besluit kan worden opgenomen in een register zoals bijvoorbeeld de Vlaamse codex.</p>
+
 {% endblock %}
