fix typo in summary

--- a/templates/besluitvorming-ap.j2
+++ b/templates/besluitvorming-ap.j2
@@ -19,6 +19,6 @@
 
 <p>De agendering en bespreking van een besluitvormingsaangelegenheid kreeg extra aandacht binnen het applicatieprofiel. De relevante klassen bevinden zich voornamelijk aan de rechterkant van het UML diagrama. Sommige types van activiteiten kregen hier hun eigen klasse: Agendering, BehandelingVanAgendapunt, BeslissingsActiviteit en Stemming. Er werd gekozen deze als klasse op te nemen omdat ze specifieke relatie(s) met een andere klassen in het diagrama hebben.</p>
 
-<p>De <strong>Beslissingsactiviteit</strong> kan aanleiding geven tot een <strong>besluit<strong>, bijvoorbeeld bij het besluit tot bekrachtiging van een decreet door de Vlaamse Regering. Een <strong>besluit</strong>, ten slotte, is een intellectuele realisatie van een rechtsbron en houdt een rechtshandeling in waarbij sprake is van een beoogd rechtsgevolg. Het besluit kan worden opgenomen in een register zoals bijvoorbeeld de Vlaamse codex.</p>
+<p>De <strong>Beslissingsactiviteit</strong> kan aanleiding geven tot een besluit, bijvoorbeeld bij het besluit tot bekrachtiging van een decreet door de Vlaamse Regering. Een <strong>besluit</strong>, ten slotte, is een intellectuele realisatie van een rechtsbron en houdt een rechtshandeling in waarbij sprake is van een beoogd rechtsgevolg. Het besluit kan worden opgenomen in een register zoals bijvoorbeeld de Vlaamse codex.</p>
 
 {% endblock %}
